--- a/static/css.css
+++ b/static/css.css
@@ -44,4 +44,10 @@ span.footer
   background-color  : #ddeeff;
 }
 
+div.top-right
+{
+  position          : absolute;
+  right             : 20px;
+}
+
 
