--- a/templates/feeds.html
+++ b/templates/feeds.html
@@ -6,6 +6,10 @@
 <body>
 <div class="body">
 
+<div class="top-right">
+  <input type="button" value="Logout" onclick="logout()" />
+</div>
+
 <span class="title">Page-RSS</span>
 
 <span class="header">About</span>
